--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </table>
     
   <h2>contact details</h2>
- <a href="file:///E:/web%20development%20projects/HTML-Personal%20Sites/contact%20details.html">contact me</a><br>
+ <a href="contact details.html">contact me</a><br>
 
 </body>
 
