--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </table>
     
   <h2>contact details</h2>
- <a href="contact details.html">contact me</a><br>
+ <a href="https://shashikumar-r.github.io/cv/contact details.html">contact me</a><br>
 
 </body>
 
