--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="15">
     <tr>
-      <td><img src="E:\web development projects\HTML-Personal Sites\Images\4939.jpg" size="1080" alt="king" width="720" height="360"></td>
+      <td><img src="https://github.com/Shashikumar-r/cv/blob/main/Images/4939.jpg" alt="king" width="720" height="360"></td>
       <td>
         <h1>Shashikumar.R </h1>
         <p>I am an student of <em> <strong><a href="https://vemanait.edu.in/""></a>Vemana Institution Of Technology</strong> </em></p>
