--- a/contact details.html
+++ b/contact details.html
@@ -7,14 +7,14 @@
   <body>
     <h1>contact details</h1>
     <ol>
-      <img src="E:\web development projects\HTML-Personal Sites\Images\mountain.png" alt="mountain" width="480" height="480">
+      <img src="https://github.com/Shashikumar-r/cv/blob/main/Images/mountain.png" alt="mountain" width="480" height="480">
       <li>Name:-shashi</li>
       <li>Contact number:-987456321</li>
       <li>Gmail:-shashi123gmail.com</li>
       <li>Offiice address:- America, 11th cross, pin code:-123456</li>
     </ol>
     <hr>
-    <form class="" action="mailto:reddymeghana1999@gmail.com" method="post" enctype="text/plain">
+    <form class="" action="mailto:reddyshashi2525@gmail.com" method="post" enctype="text/plain">
       <table>
         <tr>
         <td><label>YOUR NAME:</label></td>
